Inline code now works in nightshift mode, too. Fixes #3.

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -172,7 +172,7 @@ code {
 
 /* Inline code */
 code:not(pre code) {
-    background: #f7f7f7;
+    background: var(--code-bg);
     padding: 0.2em 0.4em;
     border-radius: 3px;
     font-size: 0.85em;
